--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
   db:
     image: mysql
     environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+      
 #      MYSQL_ROOT_PASSWORD: 
       MYSQL_DATABASE: test
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
